--- a/gyms/index.html
+++ b/gyms/index.html
@@ -8,6 +8,7 @@ title: Gyms in Winnipeg
 <a href="/gyms/crossfit204"><h3>CrossFit 204<span class="label label-danger">CrossFit</span></h3></a>
 <a href="/gyms/crossfitshinobi"><h3>CrossFit Shinobi<span class="label label-danger">CrossFit</span></h3></a>
 <a href="/gyms/crossfitsublime"><h3>CrossFit Sublime<span class="label label-danger">CrossFit</span></h3></a>
+<a href="/gyms/crossfitwinnipeg"><h3>CrossFit Winnipeg<span class="label label-danger">CrossFit</span></h3></a>
 <a href="/gyms/mcdoles"><h3>McDole's Gym<span class="label label-primary">Strongman</span><span class="label label-success">Powerlifting</span></h3></a>
 <a href="/gyms/pegcityyoga"><h3>Peg City Yoga<span class="label label-info">Yoga</span></h3></a>
 <a href="/gyms/prairiecrossfit"><h3>Prairie CrossFit<span class="label label-danger">CrossFit</span></h3></a>
