--- a/gyms/index.html
+++ b/gyms/index.html
@@ -6,6 +6,7 @@ title: Gyms in Winnipeg
 <h1>Gyms in Winnipeg</h1>
 
 <a href="/gyms/crossfit204"><h3>CrossFit 204<span class="label label-danger">CrossFit</span></h3></a>
+<a href="/gyms/crossfit84"><h3>CrossFit 84<span class="label label-danger">CrossFit</span></h3></a>
 <a href="/gyms/crossfitshinobi"><h3>CrossFit Shinobi<span class="label label-danger">CrossFit</span></h3></a>
 <a href="/gyms/crossfitsublime"><h3>CrossFit Sublime<span class="label label-danger">CrossFit</span></h3></a>
 <a href="/gyms/crossfitwinnipeg"><h3>CrossFit Winnipeg<span class="label label-danger">CrossFit</span></h3></a>
