added the rest of the crossfit gyms

--- a/gyms/index.html
+++ b/gyms/index.html
@@ -5,13 +5,17 @@ title: Gyms in Winnipeg
 
 <h1>Gyms in Winnipeg</h1>
 
+<a href="/gyms/chrysaliscrossfit"><h3>Chrysalis CrossFit<span class="label label-danger">CrossFit</span></h3></a>
 <a href="/gyms/crossfit204"><h3>CrossFit 204<span class="label label-danger">CrossFit</span></h3></a>
 <a href="/gyms/crossfit84"><h3>CrossFit 84<span class="label label-danger">CrossFit</span></h3></a>
+<a href="/gyms/crossfitroborean"><h3>CrossFit Roborean<span class="label label-danger">CrossFit</span></h3></a>
 <a href="/gyms/crossfitshinobi"><h3>CrossFit Shinobi<span class="label label-danger">CrossFit</span></h3></a>
 <a href="/gyms/crossfitsublime"><h3>CrossFit Sublime<span class="label label-danger">CrossFit</span></h3></a>
 <a href="/gyms/crossfitwinnipeg"><h3>CrossFit Winnipeg<span class="label label-danger">CrossFit</span></h3></a>
 <a href="/gyms/mcdoles"><h3>McDole's Gym<span class="label label-primary">Strongman</span><span class="label label-success">Powerlifting</span></h3></a>
 <a href="/gyms/pegcityyoga"><h3>Peg City Yoga<span class="label label-info">Yoga</span></h3></a>
 <a href="/gyms/prairiecrossfit"><h3>Prairie CrossFit<span class="label label-danger">CrossFit</span></h3></a>
+<a href="/gyms/topnotchcrossfit"><h3>Top Notch CrossFit<span class="label label-danger">CrossFit</span></h3></a>
+<a href="/gyms/starkecrossfit"><h3>Starke CrossFit<span class="label label-danger">CrossFit</span></h3></a>
 <a href="/gyms/undefeatedcrossfit"><h3>Undefeated CrossFit<span class="label label-danger">CrossFit</span></h3></a>
 
