--- a/gyms/index.html
+++ b/gyms/index.html
@@ -4,7 +4,7 @@ title: Gyms in Winnipeg
 ---
 
 <h1>Gyms in Winnipeg</h1>
-
+<div class="col-md-6">
 <a href="/gyms/chrysaliscrossfit"><h3>Chrysalis CrossFit<span class="label label-danger">CrossFit</span></h3></a>
 <a href="/gyms/crossfit204"><h3>CrossFit 204<span class="label label-danger">CrossFit</span></h3></a>
 <a href="/gyms/crossfit84"><h3>CrossFit 84<span class="label label-danger">CrossFit</span></h3></a>
@@ -12,6 +12,9 @@ title: Gyms in Winnipeg
 <a href="/gyms/crossfitshinobi"><h3>CrossFit Shinobi<span class="label label-danger">CrossFit</span></h3></a>
 <a href="/gyms/crossfitsublime"><h3>CrossFit Sublime<span class="label label-danger">CrossFit</span></h3></a>
 <a href="/gyms/crossfitwinnipeg"><h3>CrossFit Winnipeg<span class="label label-danger">CrossFit</span></h3></a>
+<a href="/gyms/freakfitness"><h3>Freak Fitness<span class="label label-default">Conditioning</span></h3></a>
+</div
+<div class="col-md-6">
 <a href="/gyms/herculesweightlifting"><h3>Hercules Weightlifting<span class="label label-warning">Weightlifting</span></h3></a>
 <a href="/gyms/dakotaweightlifting"><h3>Dakota Weightlifting<span class="label label-warning">Weightlifting</span></h3></a>
 <a href="/gyms/mcdoles"><h3>McDole's Gym<span class="label label-primary">Strongman</span><span class="label label-success">Powerlifting</span></h3></a>
@@ -20,4 +23,4 @@ title: Gyms in Winnipeg
 <a href="/gyms/topnotchcrossfit"><h3>Top Notch CrossFit<span class="label label-danger">CrossFit</span></h3></a>
 <a href="/gyms/starkecrossfit"><h3>Starke CrossFit<span class="label label-danger">CrossFit</span></h3></a>
 <a href="/gyms/undefeatedcrossfit"><h3>Undefeated CrossFit<span class="label label-danger">CrossFit</span></h3></a>
-
+</div
