--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@ layout: default
 title: Winnipeg Strength and Fitness
 ---
 
-
-<div id="home">
-  <h1>The home of strength and fitness in winnipeg</h1>
-</div>
-
+<h1>Winnipeg Strength and Fitness</h1>
+<h3>The home of strength and fitness in winnipeg</h3>
+<article>
+A place to bring together those passionate about health and performance, to celebrate our local athletes and coaches and to share in the triumphs and hardships in our journeys
+</article>
 
 <!--
 <div id="home">
