cleaned up labels

--- a/gyms/index.html
+++ b/gyms/index.html
@@ -5,22 +5,25 @@ title: Gyms in Winnipeg
 
 <h1>Gyms in Winnipeg</h1>
 <div class="col-md-6">
-<a href="/gyms/chrysaliscrossfit"><h3>Chrysalis CrossFit<span class="label label-danger">CrossFit</span></h3></a>
-<a href="/gyms/crossfit204"><h3>CrossFit 204<span class="label label-danger">CrossFit</span></h3></a>
-<a href="/gyms/crossfit84"><h3>CrossFit 84<span class="label label-danger">CrossFit</span></h3></a>
-<a href="/gyms/crossfitroborean"><h3>CrossFit Roborean<span class="label label-danger">CrossFit</span></h3></a>
-<a href="/gyms/crossfitshinobi"><h3>CrossFit Shinobi<span class="label label-danger">CrossFit</span></h3></a>
-<a href="/gyms/crossfitsublime"><h3>CrossFit Sublime<span class="label label-danger">CrossFit</span></h3></a>
-<a href="/gyms/crossfitwinnipeg"><h3>CrossFit Winnipeg<span class="label label-danger">CrossFit</span></h3></a>
-<a href="/gyms/freakfitness"><h3>Freak Fitness<span class="label label-default">Conditioning</span></h3></a>
-</div
+<ul class="list-group">
+<li class="list-group-item"><a href="/gyms/chrysaliscrossfit">Chrysalis CrossFit<span class="label label-danger">CrossFit</span></a></li>
+<li class="list-group-item"><a href="/gyms/crossfit204">CrossFit 204<span class="label label-danger">CrossFit</span></a></li>
+<li class="list-group-item"><a href="/gyms/crossfit84">CrossFit 84<span class="label label-danger">CrossFit</span></a></li>
+<li class="list-group-item"><a href="/gyms/crossfitroborean">CrossFit Roborean<span class="label label-danger">CrossFit</span></a></li>
+<li class="list-group-item"><a href="/gyms/crossfitshinobi">CrossFit Shinobi<span class="label label-danger">CrossFit</span></a></li>
+<li class="list-group-item"><a href="/gyms/crossfitsublime">CrossFit Sublime<span class="label label-danger">CrossFit</span></a></li>
+<li class="list-group-item"><a href="/gyms/crossfitwinnipeg">CrossFit Winnipeg<span class="label label-danger">CrossFit</span></a></li>
+<li class="list-group-item"><a href="/gyms/freakfitness">Freak Fitness<span class="label label-default">Conditioning</span></a></li>
+</ul>
+</div>
 <div class="col-md-6">
-<a href="/gyms/herculesweightlifting"><h3>Hercules Weightlifting<span class="label label-warning">Weightlifting</span></h3></a>
-<a href="/gyms/dakotaweightlifting"><h3>Dakota Weightlifting<span class="label label-warning">Weightlifting</span></h3></a>
-<a href="/gyms/mcdoles"><h3>McDole's Gym<span class="label label-primary">Strongman</span><span class="label label-success">Powerlifting</span></h3></a>
-<a href="/gyms/pegcityyoga"><h3>Peg City Yoga<span class="label label-info">Yoga</span></h3></a>
-<a href="/gyms/prairiecrossfit"><h3>Prairie CrossFit<span class="label label-danger">CrossFit</span></h3></a>
-<a href="/gyms/topnotchcrossfit"><h3>Top Notch CrossFit<span class="label label-danger">CrossFit</span></h3></a>
-<a href="/gyms/starkecrossfit"><h3>Starke CrossFit<span class="label label-danger">CrossFit</span></h3></a>
-<a href="/gyms/undefeatedcrossfit"><h3>Undefeated CrossFit<span class="label label-danger">CrossFit</span></h3></a>
+<ul class="list-group">
+<li class="list-group-item"><a href="/gyms/herculesweightlifting">Hercules Weightlifting<span class="label label-warning">Weightlifting</span></a></li>
+<li class="list-group-item"><a href="/gyms/dakotaweightlifting">Dakota Weightlifting<span class="label label-warning">Weightlifting</span></a></li>
+<li class="list-group-item"><a href="/gyms/mcdoles">McDole's Gym<span class="label label-primary">Strongman</span><span class="label label-success">Powerlifting</span></a></li>
+<li class="list-group-item"><a href="/gyms/pegcityyoga">Peg City Yoga<span class="label label-info">Yoga</span></a></li>
+<li class="list-group-item"><a href="/gyms/prairiecrossfit">Prairie CrossFit<span class="label label-danger">CrossFit</span></a></li>
+<li class="list-group-item"><a href="/gyms/topnotchcrossfit">Top Notch CrossFit<span class="label label-danger">CrossFit</span></a></li>
+<li class="list-group-item"><a href="/gyms/starkecrossfit">Starke CrossFit<span class="label label-danger">CrossFit</span></a></li>
+<li class="list-group-item"><a href="/gyms/undefeatedcrossfit">Undefeated CrossFit<span class="label label-danger">CrossFit</span></a></li>
 </div
