fixed layout and started fleshing out landing page

--- a/index.html
+++ b/index.html
@@ -2,12 +2,30 @@
 layout: default
 title: Winnipeg Strength and Fitness
 ---
-
+<div class="row">
+<div class="col-md-12">
 <h1>Winnipeg Strength and Fitness</h1>
 <h3>A community of strength and fitness in winnipeg</h3>
 <article>
 A place to bring together those passionate about health and performance, to celebrate our local athletes and coaches and to share in the triumphs and hardships in our journeys
 </article>
+</div>
+</div>
+
+<div class="row">
+<div class="col-md-4">
+<h3>Attend competitions</h3>
+Take a look at the a event calendar and find an event you like to watch or compete in
+</div>
+<div class="col-md-4">
+<h3>Learn About Local Athletes</h3>
+Read interviews about the great athletes in our city
+</div>
+<div class="col-md-4">
+<h3>Join the Community</h3>
+Register for our discussion group and bring the community together
+</div>
+</div>
 
 <!--
 <div id="home">
