closed div in gyms\index and fixed crossfit 204 link

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ title: Winnipeg Strength and Fitness
 ---
 <div class="row">
 <div class="col-md-12">
-<h1>Winnipeg Strength and Fitness</h1>
+<h1>Winnipeg Strength + Fitness</h1>
 <h3>A community of strength and fitness in winnipeg</h3>
 <article>
 A place to bring together those passionate about health and performance, to celebrate our local athletes and coaches and to share in the triumphs and hardships in our journeys
