--- a/gyms/index.html
+++ b/gyms/index.html
@@ -4,6 +4,7 @@ title: Gyms in Winnipeg
 ---
 
 <h1>Gyms in Winnipeg</h1>
+
 <div class="col-md-6">
 <ul class="list-group">
 <li class="list-group-item"><a href="/gyms/chrysaliscrossfit">Chrysalis CrossFit<span class="label label-danger">CrossFit</span></a></li>
@@ -26,4 +27,4 @@ title: Gyms in Winnipeg
 <li class="list-group-item"><a href="/gyms/topnotchcrossfit">Top Notch CrossFit<span class="label label-danger">CrossFit</span></a></li>
 <li class="list-group-item"><a href="/gyms/starkecrossfit">Starke CrossFit<span class="label label-danger">CrossFit</span></a></li>
 <li class="list-group-item"><a href="/gyms/undefeatedcrossfit">Undefeated CrossFit<span class="label label-danger">CrossFit</span></a></li>
-</div
+</div>
