added chicken barn

--- a/gyms/index.html
+++ b/gyms/index.html
@@ -26,5 +26,6 @@ title: Gyms in Winnipeg
 <li class="list-group-item"><a href="/gyms/prairiecrossfit">Prairie CrossFit<span class="label label-danger">CrossFit</span></a></li>
 <li class="list-group-item"><a href="/gyms/topnotchcrossfit">Top Notch CrossFit<span class="label label-danger">CrossFit</span></a></li>
 <li class="list-group-item"><a href="/gyms/starkecrossfit">Starke CrossFit<span class="label label-danger">CrossFit</span></a></li>
+<li class="list-group-item"><a href="/gyms/chickenbarn">Strongman - Chicken Barn<span class="label label-primary">Strongman</span></a></li>
 <li class="list-group-item"><a href="/gyms/undefeatedcrossfit">Undefeated CrossFit<span class="label label-danger">CrossFit</span></a></li>
 </div>
